deploy/k8s/base/local-object-storage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs
  labels:
    app.kubernetes.io/name: seaweedfs
    app.kubernetes.io/component: object-storage
spec:
  clusterIP: None
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/name: seaweedfs
    app.kubernetes.io/component: object-storage
  ports:
    - {name: master, port: 9333, targetPort: master, protocol: TCP}
    - {name: master-grpc, port: 19333, targetPort: master-grpc, protocol: TCP}
    - {name: volume, port: 8080, targetPort: volume, protocol: TCP}
    - {name: volume-grpc, port: 18080, targetPort: volume-grpc, protocol: TCP}
    - {name: filer, port: 8888, targetPort: filer, protocol: TCP}
    - {name: filer-grpc, port: 18888, targetPort: filer-grpc, protocol: TCP}
---
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-s3
  labels:
    app.kubernetes.io/name: seaweedfs
    app.kubernetes.io/component: object-storage
spec:
  selector:
    app.kubernetes.io/name: seaweedfs
    app.kubernetes.io/component: object-storage
  ports:
    - {name: s3, port: 8333, targetPort: s3, protocol: TCP}
